[package]
name = "silver-slvr"
version = "2.5.3"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "The Slvr Programming Language - Turing-incomplete smart contract language for SilverBitcoin blockchain"
keywords = ["blockchain", "smart-contracts", "language", "slvr"]
categories = ["development-tools", "compilers"]

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }

# Parsing and compilation
nom = "7.1"
regex = "1.10"
indexmap = "2.0"
smallvec = "1.11"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Cryptography
ed25519-dalek = { workspace = true }
hmac = "0.12"
rand = "0.8"

# Error handling
anyhow = "1.0"

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
pretty_assertions = { workspace = true }



[lib]
name = "silver_slvr"
path = "src/lib.rs"

[[bin]]
name = "slvr"
path = "src/bin/main.rs"
