[package]
name = "silver-slvr"
version = "2.5.3"
edition = "2021"
rust-version = "1.90"
authors = ["SilverBitcoin Team <team@silverbitcoin.org>"]
license = "Apache-2.0"
repository = "https://github.com/silverbitcoin/silverbitcoin"
homepage = "https://silverbitcoin.org"
description = "The Slvr Programming Language - Turing-incomplete smart contract language for SilverBitcoin blockchain"
keywords = ["blockchain", "smart-contracts", "language", "slvr"]
categories = ["development-tools", "compilers"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
bytes = "1.5"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tokio = { version = "1.48", features = ["full"] }
parking_lot = "0.12"
dashmap = "5.5"

# Parsing and compilation
nom = "7.1"
regex = "1.10"
indexmap = "2.0"
smallvec = "1.11"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Cryptography (512-bit only)
hmac = "0.12"
sha2 = "0.10"
rand = { version = "0.8", features = ["std", "std_rng"] }

# Error handling
anyhow = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
proptest = "1.4"
pretty_assertions = "1.4"

[lib]
name = "silver_slvr"
path = "src/lib.rs"

[[bin]]
name = "slvr"
path = "src/bin/main.rs"
